feat: update CV

--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  line-height: 1.5;
+  color: #392245;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -22,52 +22,244 @@ body {
 }
 
 .header-container {
-  background-color: blueviolet;
+  background-color: #b2a2d2;
 }
 
 .nav-list {
   display: flex;
-  justify-content: flex-start;
+  justify-content: end;
   align-items: center;
-}
-
-.nav-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-item {
+  padding: 10px;
 }
 
 .nav-link {
-  padding: 0 20px;
   line-height: 50px;
-}
-
-.nav-link {
-  transition: 0.3s;
+  text-decoration: none;
+  color: #392245;
+  padding: 20px 0;
 }
 
 .nav-link:hover {
   opacity: 0.5;
-  color: #4d2323;
 }
 
-.section-item a {
-  color: #829985;
-  text-decoration: none;
-  transition: color 0.5s;
-}
-.section-item a:hover {
-  color: #4d2323;
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.section-list {
-  list-style: none;
+.section {
+  width: 100%;
+  display: flex;
+}
+
+.section-left {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: center;
+  border-right: #9180b4 dotted 1px;
+  margin: 0;
+  padding: 20px;
+}
+
+.section-right {
+  width: 70%;
+  margin: 0;
+  padding: 20px;
+}
+
+.section-title {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #9180b4;
+  margin: 0;
+}
+
+.section-subtitle {
+  font-size: 16px;
+  margin: 0;
+  text-align: end;
+}
+
+.section-profile-title {
+  font-size: 36px;
+  text-transform: uppercase;
+  color: #9180b4;
+}
+
+.section-profile {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 20px;
+  padding: 20px;
 }
 
 .section-profile-logo {
   width: 200px;
   height: 200px;
-  object-fit: cover;
   border-radius: 50%;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.6);
-  filter: grayscale(0.2) brightness(1.05);
-  transition: 0.3s;
+}
+
+.section-profile p {
+  margin: 0;
+}
+
+.section-item a {
+  color: #9180b4;
+  text-decoration: none;
+}
+.section-item a:hover {
+  color: #392245;
+}
+
+.section-list {
+  /*list-style-type: circle;*/
+  list-style-image: url(./assets/svg/list-style.svg);
+}
+
+.link {
+  text-decoration: none;
+  color: #9180b4;
+}
+
+.link:hover {
+  color: #392245;
+}
+
+span {
+  color: #9180b4;
+}
+
+.pre {
+  padding: 0;
+  margin: 0;
+}
+
+.code {
+  font-family: "Montserrat", sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  font-style: italic;
+}
+
+.code-container {
+  overflow: hidden;
+}
+
+.button-go-to-top {
+  display: none;
+  position: fixed;
+  bottom: 60px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #392245;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+}
+
+.button-go-to-top:hover {
+  background-color: #555;
+}
+
+.footer-container {
+  background-color: #b2a2d2;
+  color: #392245;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer-item {
+  padding: 10px;
+}
+
+.rss-logo {
+  width: 121px;
+}
+
+.toggle {
+  display: none;
+  width: 60px;
+  padding: 10px;
+  margin-left: auto;
+  cursor: pointer;
+}
+.github {
+  position: relative;
+}
+
+.github::before {
+  content: "";
+  position: absolute;
+  right: 160px;
+  top: 20px;
+  width: 20px;
+  height: 20px;
+  background-image: url(./assets/svg/github.svg);
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+}
+
+@media (max-width: 768px) {
+  .section {
+    flex-direction: column;
+  }
+
+  .section-left {
+    border-right: none;
+    align-items: start;
+    width: 100%;
+    background-color: #e7e5ed4e;
+  }
+
+  .section-right {
+    width: 100%;
+  }
+
+  .nav {
+    display: none;
+  }
+  .toggle {
+    display: flex;
+  }
+
+  .nav.collapsed {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    min-height: 525px;
+    flex-direction: column;
+    background-color: #b2a2d2;
+  }
+  .nav-list.collapsed {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    padding-top: 50px;
+  }
 }
