--- a/style.css
+++ b/style.css
@@ -187,6 +187,21 @@ span {
   align-items: center;
 }
 
+.location {
+  position: relative;
+}
+
+.location::before {
+  content: "";
+  position: absolute;
+  right: 200px;
+  width: 30px;
+  height: 30px;
+  background-image: url(./assets/svg/location.svg);
+  background-repeat: no-repeat;
+  background-size: 25px 25px;
+}
+
 .footer-item {
   padding: 10px;
 }
