fix: change self-closing elements

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -128,6 +129,16 @@ header {
 .section-list {
   /*list-style-type: circle;*/
   list-style-image: url(./assets/svg/list-style.svg);
+}
+
+.screen {
+  width: 300px;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .link {
